--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,9 +6,12 @@
     padding: 0;
     border: 0;
 }
-:root {
-  --max-width: 1100px;
-}
 .containerTela{
   margin: 20px 40px;
+  max-width: 1900px;
+}
+@media screen and (min-width: 1900px) {
+  .containerTela{
+    margin: 20px auto;
+  }
 }
