--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,187 +1,40 @@
-@media screen and (min-width: 1900px) {
-    .circuloCinza{
-        position: absolute;
-        z-index: -1;
-        background-color: #403F45;
-        border-radius: 100%;
-        width: 1400px;
-        height: 1400px;
-        left: -300px;
-        top: -400px;
-    }
-}
 
-    .container{
-        width: 100%;
-        height: 830px;
-        position: relative;
-        overflow: hidden;
-    }
     .containerNav{
         display: flex;
         min-height: 120px;
         justify-content: space-between;
-        padding: 0 30px;
+        align-items: center;
+        padding: 20px 30px;
+
+    }
+    .containerFundoPreto{
+        width: 100% ;
+        height: 200px;
+        position: absolute;
+    }
+    .fundoPreto{
+        background-color: #1d1d1d;
+        width: 100%;
+        height: 200px;
+        /* border-radius: 100%; */
+        margin: 0 auto;
     }
     .containerLinks{
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 50px;
-        height: 45px;
+        margin: 0 auto;
+        gap: 70px;
+        z-index: 1;
+        /* height: 45px; */
     }
     .link{
-        color: #000;
-        text-decoration: none;
-    }
-    .faleConosco{
         color: #fff;
-        background-color: #DDB06F;
-        padding: 15px 20px;
-        border-radius: 6px;
-        height: 20px;
-        display: flex;
-        text-align: center;
         text-decoration: none;
+        font-size: 14px;
     }
-    .circuloCinza{
-        position: absolute;
-        z-index: -1;
-        background-color: #403F45;
-        border-radius: 100%;
-        width: 1100px;
-        height: 1100px;
-        left: -160px;
-        top: -290px;
-    }
-    .containerSloganFoto{
-        padding: 0 40px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    .containerSloganBotao{
-        width: 650px;
-        margin-top: 100px;
-    }
-    .containerSlogan{
-        width: 100%;
-        color: #fff;
-        font-size: 60px;
-    }
-    .circuloRoxo{
-        position: absolute;
-        z-index: -1;
-        background-color: #403380;
-        border-radius: 100%;
-        width: 900px;
-        height: 900px;
-        right: -600px;
-        top: -700px
-    }
-    .containerImagemHome{
-        position: relative;
-        width:  40vw;
-        height: 26vw;
-    }
-    .containerBotaoCotacao{
-        color: #fff;
-        margin-top: 20px;
-        background-color: #DDB06F;
-        padding: 15px 20px;
-        border-radius: 6px;
-        width: 160px;
-        height: 20px;
-        display: flex;
-        text-align: center;
-        text-decoration: none;
+    .link:hover{
+        color: #EAC774;
     }
 
-@media screen and (min-width: 800px) and (max-width: 1400px) {
-    .container{
-        width: 100%;
-        height: 830px;
-        position: relative;
-        overflow: hidden;
-    }
-    .containerNav{
-        display: flex;
-        min-height: 120px;
-        justify-content: space-between;
-        padding: 0 30px;
-    }
-    .containerLinks{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 50px;
-        height: 45px;
-    }
-    .link{
-        color: #000;
-        text-decoration: none;
-    }
-    .faleConosco{
-        color: #fff;
-        background-color: #DDB06F;
-        padding: 15px 20px;
-        border-radius: 6px;
-        height: 20px;
-        display: flex;
-        text-align: center;
-        text-decoration: none;
-    }
-    .circuloCinza{
-        position: absolute;
-        z-index: -1;
-        background-color: #403F45;
-        border-radius: 100%;
-        width: 900px;
-        height: 900px;
-        left: -160px;
-        top: -290px;
-    }
-    .containerSloganFoto{
-        padding: 0 40px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    .containerSloganBotao{
-        width: 650px;
-        margin-top: 0;
-    }
-    .containerSlogan{
-        width: 100%;
-        color: #fff;
-        font-size: 60px;
-    }
-    .circuloRoxo{
-        position: absolute;
-        z-index: -1;
-        background-color: #403380;
-        border-radius: 100%;
-        width: 900px;
-        height: 900px;
-        right: -600px;
-        top: -700px
-    }
-    .containerImagemHome{
-        position: relative;
-        width:  40vw;
-        height: 26vw;
-    }
-    .containerBotaoCotacao{
-        color: #fff;
-        margin-top: 20px;
-        background-color: #DDB06F;
-        padding: 15px 20px;
-        border-radius: 6px;
-        width: 160px;
-        height: 20px;
-        display: flex;
-        text-align: center;
-        text-decoration: none;
-    }
 
-}
