--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,11 +7,14 @@
     border: 0;
 }
 .containerTela{
-  margin: 20px 40px;
-  max-width: 1900px;
+  margin: 0px auto;
+  position: relative;
+  max-width: 1400px;
 }
 @media screen and (min-width: 1900px) {
   .containerTela{
-    margin: 20px auto;
+    margin: 0px auto;
+    position: relative;
+    max-width: 1400px;
   }
 }
