--- a/components/comentarios/comentarios.module.css
+++ b/components/comentarios/comentarios.module.css
@@ -1,69 +1,149 @@
-.container{
-    width: 100%;
-    height: 400px;
-    padding: 30px 0;
-    position: relative;
-    background-color: #D9D9D9;
+@media screen and (min-width: 831px) {
+    .container{
+        width: 100%;
+        height: 400px;
+        padding: 30px 0;
+        position: relative;
+        background-color: #D9D9D9;
 
-}
-.containerDentro{
-    padding: 0 20px;
-}
-.containerTituloPages{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 20px 0px;
-}
-.containerPages{
-    font-size: 20px;
-}
-.containerTitulo{
-    font-size: 25px;
-    font-weight: 600;
+    }
+    .containerDentro{
+        padding: 0 20px;
+    }
+    .containerTituloPages{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 20px 0px;
+    }
+    .containerPages{
+        font-size: 20px;
+    }
+    .containerTitulo{
+        font-size: 25px;
+        font-weight: 600;
+    }
+
+    .containerComentarioAspas{
+        display: flex;
+        height: 200px;
+        justify-content: space-between;
+    }
+    .containerComentario{
+        height: 100%;
+        display: flex;
+        align-items: center;
+        font-size: 40px;
+        font-weight: 600;
+        color: #666;
+    }
+    .aspas{
+        font-size: 30px;
+    }
+    .aspasLeft{
+        height: 100%;
+        padding: 0 20px;
+    }
+    .aspasRight{
+        height: 100%;
+        padding: 0 20px;
+        display: flex;
+        align-items: baseline;
+        position: relative;
+    }
+
+    .containerPessoa{
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        margin-left: 80px;
+    }
+    .foto{
+        border-radius: 100%;
+    }
+    .containerNomeCidade{
+        padding: 5px 0;
+    }
+    .containerNome{
+        font-weight: 600;
+    }
+    .containerCidade{
+        font-size: 14px;
+        margin-top: 5px;
+    }
 }
 
-.containerComentarioAspas{
-    display: flex;
-    height: 200px;
-    justify-content: space-between;
-}
-.containerComentario{
-    height: 100%;
-    display: flex;
-    align-items: center;
-    font-size: 40px;
-    font-weight: 600;
-    color: #666;
-}
-.aspasLeft{
-    height: 100%;
-    padding: 0 20px;
-}
-.aspasRight{
-    height: 100%;
-    padding: 0 20px;
-    display: flex;
-    align-items: baseline;
-    position: relative;
-}
+@media screen and (max-width: 830px) {
+    .container{
+        width: 100%;
+        height: 400px;
+        padding: 30px 0;
+        position: relative;
+        background-color: #D9D9D9;
 
-.containerPessoa{
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    margin-left: 80px;
-}
-.foto{
-    border-radius: 100%;
-}
-.containerNomeCidade{
-    padding: 5px 0;
-}
-.containerNome{
-    font-weight: 600;
-}
-.containerCidade{
-    font-size: 14px;
-    margin-top: 5px;
+    }
+    .containerDentro{
+        padding: 0 20px;
+    }
+    .containerTituloPages{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 20px 0px;
+    }
+    .containerPages{
+        font-size: 16px;
+    }
+    .containerTitulo{
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .containerComentarioAspas{
+        display: flex;
+        height: 200px;
+        justify-content: space-between;
+    }
+    .containerComentario{
+        height: 100%;
+        display: flex;
+        align-items: center;
+        font-size: 25px;
+        font-weight: 600;
+        color: #666;
+    }
+    .aspas{
+        font-size: 20px;
+    }
+    .aspasLeft{
+        height: 100%;
+        padding: 0 20px;
+    }
+    .aspasRight{
+        height: 100%;
+        padding: 0 20px;
+        display: flex;
+        align-items: baseline;
+        position: relative;
+    }
+
+    .containerPessoa{
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        margin-left: 20px;
+    }
+    .foto{
+        border-radius: 100%;
+    }
+    .containerNomeCidade{
+        padding: 5px 0;
+    }
+    .containerNome{
+        font-weight: 600;
+    }
+    .containerCidade{
+        font-size: 14px;
+        margin-top: 5px;
+    }
 }
