--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,134 +1,284 @@
-.main{
-    padding-bottom: 100px;
-}
-.containerForaFraseBotaoCards{
-    width: 100%;
-    height: 450px;
-    /* min-height: 130px; */
-    position: relative;
-    background-color: #D9D9D9;
-    /* overflow: hidden; */
-}
-.containerFraseBotao{
-    padding-top: 100px;
-    padding-bottom: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.containerFrase{
-    width: 500px;
-    font-size: 50px;
-    font-weight: 600;
-}
-.containerBotaoCotacao{
-    width: 300px;
-    height: 20px;
-    margin: 20px 0;
-    padding: 10px 0;
-    border-radius: 25px;
-    text-align: center;
-    background-color: #000;
-    font-size: 16px;
-    color: #fff;
-}
-.containerSegurosTopo{
-    padding-top: 50px;
-    padding-bottom: 50px;
-    display: flex;
-    justify-content: space-between;
-}
+@media screen and (min-width: 831px) {
+    .main{
+        padding-bottom: 100px;
+    }
+    .containerForaFraseBotaoCards{
+        width: 100%;
+        min-height: 450px;
+        position: relative;
+        background: linear-gradient(to bottom, #D9D9D9, transparent);
 
-.containerCardSeguroTopo{
-    width: 450px;
-    height: 350px;
-    background-color: #fff;
-    border-radius: 29px;
-    overflow: hidden;
-    cursor: pointer;
-}
-.containerCardSeguroTopo:hover{
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-.containerTituloDescricaoCardSeguroTopo{
-    height: calc(35% - 40px);
-    padding: 20px;
-}
-.tituloCardSeguroTopo{
-    font-weight: 700;
-    margin-bottom: 10px;
-}
-.descricaoCardSeguroTopo{
-    font-weight: 500;
-    font-size: 14px;
-    color: #666;
-}
+        /* overflow: hidden; */
+    }
 
-.imagemCardSeguroTopo{
-    position: relative;
-    width: 100%;
-    height: 65%;
-    overflow: hidden;
-}
+    .containerFraseBotao{
+        padding-top: 100px;
+        padding-bottom: 60px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 100px 20px;
+    }
+    .containerFrase{
+        width: 500px;
+        font-size: 50px;
+        font-weight: 600;
+    }
+    .containerBotaoCotacao{
+        width: 300px;
+        height: 20px;
+        margin: 20px 0;
+        padding: 10px 0;
+        border-radius: 25px;
+        text-align: center;
+        background-color: #000;
+        font-size: 16px;
+        color: #fff;
+        cursor: pointer;
+    }
+    .containerSegurosTopo{
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 20px 0;
+    }
 
-.imagemTopo:hover{
-    transition: all .3s ease-in-out;
-    transform: scale(1.05);
-}
+    .containerCardSeguroTopo{
+        width: 430px;
+        height: 350px;
+        background-color: #fff;
+        border-radius: 29px;
+        overflow: hidden;
+        cursor: pointer;
+        margin: 10px 10px;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    }
+    .containerCardSeguroTopo:hover{
+        box-shadow: rgba(234, 223, 3, 0.2) 0px 7px 29px 0px;
+    }
+    .containerTituloDescricaoCardSeguroTopo{
+        height: calc(40% - 40px);
+        padding: 20px;
+    }
+    .tituloCardSeguroTopo{
+        font-weight: 700;
+        margin-bottom: 10px;
+    }
+    .descricaoCardSeguroTopo{
+        font-weight: 500;
+        font-size: 14px;
+        color: #666;
+    }
+
+    .imagemCardSeguroTopo{
+        position: relative;
+        width: 100%;
+        height: 60%;
+        overflow: hidden;
+    }
+
+    .imagemTopo:hover{
+        transition: all .3s ease-in-out;
+        transform: scale(1.05);
+    }
 
 
-.containerParceiros{
-    margin-top: 200px;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    border-top: 0.3px dashed #666;
-    border-bottom: 0.3px dashed #666;
-    /* background-color: aqua; */
-}
-.tituloParceiros{
-    padding-bottom: 40px ;
-    font-size: 25px;
-    font-weight: 600;
-}
-.containerLogosParceiros{
-    display: flex;
-    gap: 100px;
-}
-.logoParceiros:hover{
-    cursor: pointer;
-    transition: all .3s ease-in-out;
-    transform: scale(1.05);
-}
+    .containerParceiros{
+        margin-top: 50px;
+        min-height: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        border-top: 0.3px dashed #666;
+        border-bottom: 0.3px dashed #666;
+        /* background-color: aqua; */
+    }
+    .tituloParceiros{
+        padding-bottom: 40px ;
+        font-size: 25px;
+        font-weight: 600;
+    }
+    .containerLogosParceiros{
+        display: flex;
+        gap: 100px;
+    }
+    .logoParceiros:hover{
+        cursor: pointer;
+        transition: all .3s ease-in-out;
+        transform: scale(1.05);
+    }
 
-.containerSeguros{
+    .containerSeguros{
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 20px 0;
+    }
+    .containerCardSeguro{
+        height: 160px;
+        width: 430px;
+        padding: 40px 10px;
+        cursor: pointer;
+        border-bottom: 5px solid #fff;
+        position: relative;
+    }
+    .containerCardSeguro:hover{
+        border-bottom: 5px solid #EAC774;
+    }
+
+    .tituloSeguro{
+        padding: 20px 0;
+        font-size: 18px;
+        font-weight: 600;
+    }
+
+    .descricaoSeguro{
+        font-size: 14px;
+    }
+}
+@media screen and (max-width: 830px) {
+    .main{
+        padding-bottom: 100px;
+    }
+    .containerForaFraseBotaoCards{
+        width: 100%;
+        min-height: 450px;
+        position: relative;
+        background: linear-gradient(to bottom, #D9D9D9, transparent);
     
-    display: flex;
-    gap: 10px;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.containerCardSeguro{
-    height: 160px;
-    width: 430px;
-    padding: 40px 10px;
-    cursor: pointer;
-    border-bottom: 5px solid #fff;
-    position: relative;
-}
-.containerCardSeguro:hover{
-    border-bottom: 5px solid #EAC774;
-}
-
-.tituloSeguro{
-    padding: 20px 0;
-    font-size: 18px;
-    font-weight: 600;
-}
-
-.descricaoSeguro{
-    font-size: 14px;
+        /* overflow: hidden; */
+    }
+    .containerFraseBotao{
+        padding-top: 100px;
+        padding-bottom: 60px;
+        align-items: center;
+        padding: 50px 20px;
+    }
+    .containerFrase{
+        max-width: 500px;
+        font-size: 30px;
+        font-weight: 600;
+    }
+    .containerBotaoCotacao{
+        width: 300px;
+        height: 20px;
+        margin: 20px 0;
+        padding: 10px 0;
+        border-radius: 25px;
+        text-align: center;
+        background-color: #000;
+        font-size: 16px;
+        color: #fff;
+        cursor: pointer;
+    }
+    .containerSegurosTopo{
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 20px 0;
+    }
+    
+    .containerCardSeguroTopo{
+        width: 430px;
+        min-height: 350px;
+        background-color: #fff;
+        border-radius: 29px;
+        overflow: hidden;
+        cursor: pointer;
+        margin: 10px 10px;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    }
+    .containerCardSeguroTopo:hover{
+        box-shadow: rgba(234, 223, 3, 0.2) 0px 7px 29px 0px;
+    }
+    .containerTituloDescricaoCardSeguroTopo{
+        height: calc(40% - 40px);
+        padding: 20px;
+    }
+    .tituloCardSeguroTopo{
+        font-weight: 700;
+        margin-bottom: 10px;
+    }
+    .descricaoCardSeguroTopo{
+        font-weight: 500;
+        font-size: 14px;
+        color: #666;
+    }
+    
+    .imagemCardSeguroTopo{
+        position: relative;
+        width: 100%;
+        height: 60%;
+        overflow: hidden;
+    }
+    
+    .imagemTopo:hover{
+        transition: all .3s ease-in-out;
+        transform: scale(1.05);
+    }
+    
+    
+    .containerParceiros{
+        margin-top: 50px;
+        min-height: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        border-top: 0.3px dashed #666;
+        border-bottom: 0.3px dashed #666;
+        padding: 30px 0;
+        /* background-color: aqua; */
+    }
+    .tituloParceiros{
+        padding-bottom: 40px ;
+        font-size: 25px;
+        font-weight: 600;
+    }
+    .containerLogosParceiros{
+        display: flex;
+        gap: 100px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .logoParceiros:hover{
+        cursor: pointer;
+        transition: all .3s ease-in-out;
+        transform: scale(1.05);
+    }
+    
+    .containerSeguros{
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 20px 0;
+    }
+    .containerCardSeguro{
+        height: 160px;
+        width: 430px;
+        padding: 40px 10px;
+        cursor: pointer;
+        border-bottom: 5px solid #fff;
+        position: relative;
+    }
+    .containerCardSeguro:hover{
+        border-bottom: 5px solid #EAC774;
+    }
+    
+    .tituloSeguro{
+        padding: 20px 0;
+        font-size: 18px;
+        font-weight: 600;
+    }
+    
+    .descricaoSeguro{
+        font-size: 14px;
+    }
 }
