--- a/components/rodape/rodape.module.css
+++ b/components/rodape/rodape.module.css
@@ -1,37 +1,80 @@
-.container{
-    width: 100%;
-    height: 300px;
-    padding: 30px 0;
-    position: relative;
-    background-color: #212121;
-
+@media screen and (min-width: 831px) {
+    .container{
+        width: 100%;
+        min-height: 300px;
+        padding: 30px 0;
+        position: relative;
+        background-color: #212121;
+    
+    }
+    .containerDentro{
+        display: flex;
+        justify-content: space-between;
+    }
+    .titulo{
+        color: #EAC774;
+        font-weight: 600;
+        font-size: 17px;
+    }
+    .subtitulo{
+        color: #fff;
+        font-weight: 600;
+        font-size: 14px;
+        margin-top: 20px;
+    }
+    .texto{
+        color: #fff;
+        font-size: 12px;
+        text-decoration: none;
+    }
+    .containerSetor{
+        width: 250px;
+        padding: 40px 20px;
+    }
+    .containerSocial{
+        margin-top: 20px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 }
-.containerDentro{
-    display: flex;
-}
-.titulo{
-    color: #EAC774;
-    font-weight: 600;
-    font-size: 17px;
-}
-.subtitulo{
-    color: #fff;
-    font-weight: 600;
-    font-size: 14px;
-    margin-top: 20px;
-}
-.texto{
-    color: #fff;
-    font-size: 12px;
-    text-decoration: none;
-}
-.containerSetor{
-    width: 300px;
-    padding: 40px 20px;
-}
-.containerSocial{
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+@media screen and (max-width: 830px) {
+    .container{
+        width: 100%;
+        min-height: 300px;
+        padding: 30px 0;
+        position: relative;
+        background-color: #212121;
+    
+    }
+    .containerDentro{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .titulo{
+        color: #EAC774;
+        font-weight: 600;
+        font-size: 17px;
+    }
+    .subtitulo{
+        color: #fff;
+        font-weight: 600;
+        font-size: 14px;
+        margin-top: 20px;
+    }
+    .texto{
+        color: #fff;
+        font-size: 12px;
+        text-decoration: none;
+    }
+    .containerSetor{
+        width: 250px;
+        padding: 40px 20px;
+    }
+    .containerSocial{
+        margin-top: 20px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 }
