--- a/components/comentarios/comentarios.module.css
+++ b/components/comentarios/comentarios.module.css
@@ -11,6 +11,7 @@
         padding: 0 20px;
     }
     .containerTituloPages{
+        width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -26,14 +27,15 @@
 
     .containerComentarioAspas{
         display: flex;
-        height: 200px;
+        min-height: 200px;
         justify-content: space-between;
     }
     .containerComentario{
+        width: 80%;
         height: 100%;
         display: flex;
         align-items: center;
-        font-size: 40px;
+        font-size: 25px;
         font-weight: 600;
         color: #666;
     }
@@ -57,6 +59,7 @@
         flex-direction: row;
         gap: 20px;
         margin-left: 80px;
+        margin-top: 20px;
     }
     .foto{
         border-radius: 100%;
@@ -76,7 +79,7 @@
 @media screen and (max-width: 830px) {
     .container{
         width: 100%;
-        height: 400px;
+        min-height: 400px;
         padding: 30px 0;
         position: relative;
         background-color: #D9D9D9;
@@ -101,14 +104,14 @@
 
     .containerComentarioAspas{
         display: flex;
-        height: 200px;
+        min-height: 200px;
         justify-content: space-between;
     }
     .containerComentario{
         height: 100%;
         display: flex;
         align-items: center;
-        font-size: 25px;
+        font-size: 18px;
         font-weight: 600;
         color: #666;
     }
@@ -132,6 +135,7 @@
         flex-direction: row;
         gap: 20px;
         margin-left: 20px;
+        margin-top: 20px;
     }
     .foto{
         border-radius: 100%;
