--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,9 +12,9 @@
         width: 100%;
         padding-top: 100px;
         padding-bottom: 60px;
-        display: flex;
+        /* display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: center; */
         padding: 100px 20px;
     }
     .containerFrase{
